changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fixed bug #1962926 "Fix for crash on division by zero", courtesy of Arvid Norlander
 common/item.c
Yann "gros" Chachkoff 2008-05-13

Removed 'context' stuff as it isn't used here. Clean event handling.
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim.h cfanim_proto.h
Nicolas Weeger 2008-05-12

Add 'moveto' command, and 'byname' victim type. Fix potential memory leak.
Enable moves to take more than one tick.
 doc/Developers/plugins.doc/cfanim/animfiles.txt
 plugins/cfanim/cfanim.c
 plugins/cfanim/include/cfanim.h cfanim_proto.h
Nicolas Weeger 2008-05-12

Wrapper for move_to(). Fix invalid move_to parameter order.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2008-05-12

Give access to find_string() to plugins. Fix invalid manual_apply parameter order.
 include/sproto.h
 server/plugins.c
Nicolas Weeger 2008-05-12

Detect correct prototype for strerror_r() courtesy Arvid Norlander.
 common/porting.c
 configure.ac
 include/autoconf.h.in
 include/libproto.h
Andreas Kirschbaum 2008-05-12

Ansi C compatibility improvements courtesy Arvid Norlander:
 include/attack.h: do not redeclare variable
 socket/lowlevel.c: use #include <errno.h>
 (lots of files): use prototypes
Andreas Kirschbaum 2008-05-12

Fix possible buffer overflows courtesy Arvid Norlander.
 common/init.c
Andreas Kirschbaum 2008-05-12

Give access to move_to() to plugins.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2008-05-12
