@@ -31,7 +31,7 @@ cfrhg_la_SOURCES = cfrhg.c\
 
 cfrhg_la_LIBADD =
 cfrhg_la_LDFLAGS = -module -avoid-version -Xlinker -export-dynamic -rdynamic -Xlinker -Bsymbolic
-AM_CPPFLAGS = -I$(srcdir)/include -I../common/include -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(srcdir)/include -I$(srcdir)/../common/include -I$(top_srcdir)/include
 
 proto:
 	cproto -D__CEXTRACT__ -o include/cfrhg_proto.h $(CPPFLAGS) $(AM_CPPFLAGS) \
